# Kobengine-Proto

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Kobengine/Commands/: DamageCommand.cpp  DamageCommand.h  MoveCommands.cpp  MoveCommands.h  ScoreCommand.cpp  ScoreCommand.h
Kobengine/Components/: Animator.cpp  Animator.h  ColliderComponent.cpp  ColliderComponent.h  FPSComponent.cpp  FPSComponent.h  GridRendererComponent.cpp  GridRendererComponent.h  HealthComponent.cpp  HealthComponent.h  ImageRendererComponent.cpp  ImageRendererComponent.h  IntUIComponent.cpp  IntUIComponent.h  RotateComponent.cpp  RotateComponent.h  ScoreComponent.cpp  ScoreComponent.h  TextRendererComponent.cpp  TextRendererComponent.h  ThrashTheCacheComponent.cpp  ThrashTheCacheComponent.h  TrashTheCacheComponent.cpp  TrashTheCacheComponent.h
Kobengine/Engine/: Font.cpp  Font.h  HashUtils.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ServiceLocator.h  Singleton.h  SpriteSheet.cpp  SpriteSheet.h  Texture2D.cpp  Texture2D.h  Timer.cpp  Timer.h
Kobengine/Engine/Audio/: ISoundSystem.h  LoggerSoundSystem.cpp  LoggerSoundSystem.h  NullSoundSystem.h  SDLSoundSystem.cpp  SDLSoundSystem.h  SoundSystem.cpp  SoundSystem.h
Kobengine/Engine/Collision/: DefaultCollisionSystem.cpp  DefaultCollisionSystem.h  ICollisionSystem.h  NullCollisionSystem.h
Kobengine/Engine/Input/: Gamepad.cpp  Gamepad.h
Kobengine/Engine/Managers/: InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h
Kobengine/Events/: Event.h  EventListeners.h
Kobengine/Main/: Kobengine.cpp  Kobengine.h  Main.cpp  main.cpp
Kobengine/Object/: Command.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  Transform.cpp  Transform.h
Kobengine/SteamAchievements/: AchievementManager.h  SteamAchievements.cpp  SteamAchievements.h
Ribbit/: Component.h  FPSComponent.h  Font.cpp  GameObject.cpp  GameObject.h  ImageRendererComponent.cpp  Main.cpp  ResourceManager.cpp  Ribbit.cpp  Ribbit.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  TextObject.cpp  TextObject.h  Timer.cpp  Timer.h  Transform.cpp  Transform.h
Ribbit/Components/: FPSComponent.cpp  FPSComponent.h  ImageRendererComponent.cpp  ImageRendererComponent.h  RotateComponent.cpp  RotateComponent.h  TextRendererComponent.cpp  TextRendererComponent.h
Ribbit/Engine/: Font.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Singleton.h  Texture2D.cpp  Texture2D.h
Ribbit/Engine/Managers/: InputManager.cpp  InputManager.h  ResourceManager.h  SceneManager.cpp  SceneManager.h
Ribbit/Main/: Main.cpp  Ribbit.cpp
Ribbit/Object/: Component.cpp  Component.h  GameObject.cpp  GameObject.h
